@@ -8,6 +8,8 @@ IN DEVELOPMENT ======= 1.3.0
 - added: new global variables - Builders, Mail, Utils
 - added: Builders.validate(schemaName, model) - returns ErrorBuilder from everywhere (uses framework.resource)
 - added: utils.assign(obj, path, value/function)
+- added: framework.logic(name);
+- added: controller.logic(name);
 
 - updated: Builders.schema(name, obj, [defaults], [validator]) - validator is new
 - updated: Builders.validation(name, [arr] or [function])
@@ -19,6 +21,7 @@ IN DEVELOPMENT ======= 1.3.0
 - fixed: utils.validation()
 - fixed: multipart upload (problem with multiple values)
 - fixed: layout in partial views (from the controller)
+- fixed: Windows path
 
 IMPORTANT:
 rewrited: WebSocket + WebSocket supports: text, JSON, binary, ping + pong
